Fix toggle all button overlapping pre-existing actions

--- a/src/toggle-all/styles.css
+++ b/src/toggle-all/styles.css
@@ -1,9 +1,15 @@
 /* recreate styles of action buttons in pin sections */
 .filter-panel__labels-title-action {
   position: absolute;
-  top: .04rem;
+  top: .09rem;
   right: 0;
   height: .24rem;
   width: .24rem;
   cursor: pointer;
+}
+
+/* offset existing action pins left */
+.filter-panel__labels-title-action:not(.toggle),
+.filter-panel__labels-title-action--text {
+  margin-right: .34rem;
 }
